[gd_scene load_steps=6 format=3 uid="uid://dot1g8gf0cso2"]

[ext_resource type="Script" path="res://scripts/Object.gd" id="1_cfnp7"]
[ext_resource type="Texture2D" uid="uid://ccp8dwdrwiwfa" path="res://assets/image/objets/asset_collage.png" id="2_w6o6c"]
[ext_resource type="Texture2D" uid="uid://c1h0w5c5md2u2" path="res://assets/image/objets/asset_collage_selected.png" id="3_6vqbw"]
[ext_resource type="Texture2D" uid="uid://di53evnl7w006" path="res://assets/image/objets/asset_collage_highlight.png" id="4_myitk"]
[ext_resource type="PackedScene" uid="uid://c7asq67ysb1xc" path="res://scenes/elements/missions/missionText.tscn" id="5_1u2ed"]

[node name="ObjMatraque" type="Node2D"]
script = ExtResource("1_cfnp7")

[node name="TextureButton" type="TextureButton" parent="."]
z_index = 130
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -95.0
offset_right = 165.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(165, 95)
texture_normal = ExtResource("2_w6o6c")
texture_pressed = ExtResource("3_6vqbw")
texture_hover = ExtResource("4_myitk")
ignore_texture_size = true
stretch_mode = 5

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="MarginContainer" parent="." instance=ExtResource("5_1u2ed")]
z_index = 140

[node name="MyMissionLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "Avant de devenir un célèbre chevalier Jedi, et bien avant de se révéler l’âme la plus noire de la galaxie, Anakin Skywalker est un jeune esclave sur la planète Tatooine. La Force est déjà puissante en lui et il est un remarquable pilote de Podracer. Le maître Jedi Qui-Gon Jinn le découvre et entrevoit alors son immense potentiel.
Pendant ce temps, l’armée de droïdes de l’insatiable Fédération du Commerce a envahi Naboo, une planète pacifique, dans le cadre d’un plan secret des Sith visant à accroître leur pouvoir. Pour défendre la reine de Naboo, Amidala, les chevaliers Jedi vont devoir affronter le redoutable Seigneur Sith, Dark Maul."

[connection signal="button_down" from="TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_texture_button_button_up"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
