[gd_scene load_steps=6 format=3 uid="uid://nu2jqkcfpqi2"]

[ext_resource type="Script" path="res://scripts/Object.gd" id="1_q6xsv"]
[ext_resource type="Texture2D" uid="uid://ccl4upmm5ydyq" path="res://assets/image/objets/asset_matraque.png" id="2_kp3kd"]
[ext_resource type="Texture2D" uid="uid://bnxrva1hkjlmt" path="res://assets/image/objets/asset_matraque_selected.png" id="3_n1xx5"]
[ext_resource type="Texture2D" uid="uid://lp4578e0nwe8" path="res://assets/image/objets/asset_matraque_highlight.png" id="4_3kpc7"]
[ext_resource type="FontFile" uid="uid://c1114d7vgm2up" path="res://assets/fonts/Helvetica Neue Condensed Bold.ttf" id="5_nh3cr"]

[node name="ObjMatraque" type="Node2D"]
script = ExtResource("1_q6xsv")

[node name="TextureButton" type="TextureButton" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -95.0
offset_right = 165.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(165, 95)
texture_normal = ExtResource("2_kp3kd")
texture_pressed = ExtResource("3_n1xx5")
texture_hover = ExtResource("4_3kpc7")
ignore_texture_size = true
stretch_mode = 5

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -133.0
offset_top = -522.0
offset_right = 133.0
offset_bottom = -116.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 4

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(1, 1, 1, 0.643137)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_outline_size = 4
theme_override_fonts/font = ExtResource("5_nh3cr")
text = "En utilisant le VLT de l’ESO, une équipe d’astronomes européens a pu démontrer pour la première fois qu’un magnétar – un type rare d’étoile à neutrons – a été formé à partir d’une étoile ayant une masse d’au moins 40 fois celle du Soleil. Ce résultat représente un véritable défi pour les théories en vigueur sur l'évolution des étoiles puisqu’une étoile aussi massive était supposée devenir un trou noir et non un magnétar. Ce résultat soulève donc une question fondamentale : quelle masse doit réellement avoir une étoile pour devenir un trou noir ?"
horizontal_alignment = 3
vertical_alignment = 1
autowrap_mode = 2

[connection signal="button_down" from="TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_texture_button_button_up"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_texture_button_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
